@@ -19,8 +19,8 @@ to display. The available types are:</p>
   <li>Line</li>
   <li>Candlestick</li>
   <li>Point and Figure</li>
-  <li>Swing<br>
-  </li>
+  <li>Swing</li>
+  <li>Exhaustion Bars</li>
 </ul>
 <p></p>
 <h3>Bar Chart</h3>
@@ -60,15 +60,32 @@ you to overlay indicators.</p>
 <p></p>
 <p></p>
 <p></p>
-<br>
+
 <h3>Swing</h3>
-This is the typical Gann type swing chart.<br>
-<br>
+<p>This is the typical Gann type swing chart.</p>
+<p>
 <img src="swing.png" title="" alt=""
- style="width: 722px; height: 604px;"><br>
-<br>
-<br>
-<br>
-<br>
+ style="width: 722px; height: 604px;">
+</p>
+
+<h3>Exhaustion Bars</h3>
+<p><b>NOTE:</b> This chart type is experimental.</p>
+<p>
+"Outside Bars" (yellow) - trading range encompasses the previous day.
+"Inside Bars" (pink) - trading range is encompassed by the previous day.
+Indicates short-term reversal.
+</p>
+<p>
+Must be accompanied by volume. Should be preceeded by a long trend.
+</p>
+<p>
+The outside bar at 20030313 is a classic. It is even more strong as it
+encompasses both previous days and has a large body.
+</p>
+<p>
+<img src="exhaustion.png" title="Exhaustion Bars" alt="Exhaustion Bars"
+ style="width: 717px; height: 755px;">
+</p>
+
 </body>
 </html>
